==> HXHndj/MSPM0G3519_CodeTemplate/OLED_SPI_Test/OLED.c <==
#define OLED_CHARSET_UTF8
#include "ti_msp_dl_config.h"
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>
#include "delay.h"

void OLED_WriteCommand(uint8_t Command)
{
	OLED_W_CS(0);					//拉低CS，开始通信
	OLED_W_DC(0);					//拉低DC，表示即将发送命令
	
	/*等待SPI不忙，然后发送数据*/
	while (DL_SPI_isBusy(SPI_0_INST));
	DL_SPI_transmitData8(SPI_0_INST, Command);
	while (DL_SPI_isBusy(SPI_0_INST));
	
	OLED_W_CS(1);					//拉高CS，结束通信
}

void OLED_WriteData(uint8_t *Data, uint8_t Count)
{
	uint8_t i;
	
	OLED_W_CS(0);					//拉低CS，开始通信
	OLED_W_DC(1);					//拉高DC，表示即将发送数据
	
	/*循环Count次，进行连续的数据写入*/
	for (i = 0; i < Count; i ++)
	{
		/*等待SPI不忙，然后发送数据*/
		while (DL_SPI_isBusy(SPI_0_INST));
		DL_SPI_transmitData8(SPI_0_INST, Data[i]);
		while (DL_SPI_isBusy(SPI_0_INST));
	}
	
	OLED_W_CS(1);					//拉高CS，结束通信
}

void OLED_Init(void)
{
	OLED_GPIO_Init();			//先调用底层的端口初始化
	
	/*硬件复位OLED*/
	OLED_W_RES(1);
	delay_ms(100);
	OLED_W_RES(0);
	delay_ms(100);
	OLED_W_RES(1);
	
	/*写入一系列的命令，对OLED进行初始化配置*/
	OLED_WriteCommand(0xAE);	//设置显示开启/关闭，0xAE关闭，0xAF开启
	OLED_WriteCommand(0xD5);	//设置显示时钟分频比/振荡器频率
	OLED_WriteCommand(0x80);	//0x00~0xFF
	OLED_WriteCommand(0xA8);	//设置多路复用率
	OLED_WriteCommand(0x3F);	//0x0E~0x3F
	OLED_WriteCommand(0xD3);	//设置显示偏移
	OLED_WriteCommand(0x00);	//0x00~0x7F
	
	OLED_WriteCommand(0x40);	//设置显示开始行，0x40~0x7F
	OLED_WriteCommand(0xA1);	//设置左右方向，0xA1正常，0xA0左右反置
	OLED_WriteCommand(0xC8);	//设置上下方向，0xC8正常，0xC0上下反置
	OLED_WriteCommand(0xDA);	//设置COM引脚硬件配置
	OLED_WriteCommand(0x12);
	
	OLED_WriteCommand(0x81);	//设置对比度
	OLED_WriteCommand(0xCF);	//0x00~0xFF
	OLED_WriteCommand(0xD9);	//设置预充电周期
	OLED_WriteCommand(0xF1);
	OLED_WriteCommand(0xDB);	//设置VCOMH取消选择级别
	OLED_WriteCommand(0x30);

	OLED_WriteCommand(0xA4);	//设置整个显示打开/关闭
	OLED_WriteCommand(0xA6);	//设置正常/反色显示，0xA6正常，0xA7反色
	OLED_WriteCommand(0x8D);	//设置充电泵
	OLED_WriteCommand(0x14);
	OLED_WriteCommand(0xAF);	//开启显示
	
	OLED_Clear();				//清空显存数组
	OLED_Update();				//更新显示，清屏，防止初始化后未显示内容时花屏
}

void OLED_DrawLine(int16_t X0, int16_t Y0, int16_t X1, int16_t Y1)
{
	int16_t x, y;
	int16_t dx, dy;
	int16_t x_inc, y_inc;
	int16_t error;
	int16_t index;
	
	dx = X1 - X0;
	dy = Y1 - Y0;
	
	if (dx >= 0)
	{
		x_inc = 1;
	}
	else
	{
		x_inc = -1;
		dx = -dx;
	}
	
	if (dy >= 0)
	{
		y_inc = 1;
	}
	else
	{
		y_inc = -1;
		dy = -dy;
	}
	
	x = X0;
	y = Y0;
	
	/*将两点之间画一条直线*/
	if (dx > dy)
	{
		error = dx >> 1;
		for (index = 0; index <= dx; index ++)
		{
			OLED_DrawPoint(x, y);
			error += dy;
			if (error > dx)
			{
				error -= dx;
				y += y_inc;
			}
			x += x_inc;
		}
	}
	else
	{
		error = dy >> 1;
		for (index = 0; index <= dy; index ++)
		{
			OLED_DrawPoint(x, y);
			error += dx;
			if (error > dy)
			{
				error -= dy;
				x += x_inc;
			}
			y += y_inc;
		}
	}
}
